<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorBackground">

    <!-- Título -->
    <TextView
        android:id="@+id/title_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajustes"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:paddingBottom="16dp" />

    <!-- Idioma -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/icon_language"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@android:drawable/ic_menu_sort_alphabetically"
            android:contentDescription="@string/description_setting_language" />

        <TextView
            android:id="@+id/text_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_language"
            android:textSize="18sp"
            android:paddingStart="16dp" />

        <ImageButton
            android:id="@+id/icon_arrow_language"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_media_next"
            android:contentDescription="@string/description_setting_language"/>
    </LinearLayout>

    <!-- Eliminar Pokémon -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/icon_delete_pokemon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/description_setting_delete_pokemon" />

        <TextView
            android:id="@+id/text_delete_pokemon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_delete_pokemon"
            android:textSize="18sp"
            android:paddingStart="16dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_delete_pokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:contentDescription="@string/description_setting_delete_pokemon"/>
    </LinearLayout>

    <!-- Acerca de -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/icon_about"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@android:drawable/ic_menu_info_details"
            android:contentDescription="@string/description_setting_about" />

        <TextView
            android:id="@+id/text_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_about"
            android:textSize="18sp"
            android:paddingStart="16dp" />

        <ImageButton
            android:id="@+id/icon_arrow_about"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_media_next"
            android:contentDescription="@string/description_setting_about"/>
    </LinearLayout>

    <!-- Cerrar sesión -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/icon_logout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@android:drawable/ic_delete"
            android:contentDescription="@string/description_setting_logout" />

        <TextView
            android:id="@+id/text_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_logout"
            android:textSize="18sp"
            android:padding="10dp" />

        <ImageButton
            android:id="@+id/icon_arrow_logout"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_media_next"
            android:contentDescription="@string/description_setting_logout"/>
    </LinearLayout>

</LinearLayout>